streaming-mern-stack/templates/ingress.yaml
# 1. API Ingress (With Rewrite Rules)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-app-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service-svc
                port:
                  number: 80
          - path: /admin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-service-svc
                port:
                  number: 80
          - path: /chat(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-service-svc
                port:
                  number: 80
          - path: /streaming(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: streaming-service-svc
                port:
                  number: 80
---
# 2. Frontend Ingress (No Rewrite Rules)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-app-frontend-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
